# PackageValidation

./: .gitignore  .travis.yml  Jenkinsfile  LICENSE  MANIFEST.in  README.md  README.rst  cx_setup.py  deployment.yml  documentation.url  pyproject.toml  requirements-ci.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox_matrix.yml
ci/docker/pytest_tests/: Dockerfile
ci/docker/python/linux/jenkins/: Dockerfile  requirements-ci.txt
ci/docker/python/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/python/windows/jenkins/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/docker/shared/: requirements-ci.txt
ci/jenkins/scripts/: devpi.groovy  packaging.groovy  tox.groovy
dcc_qc/: __init__.py  __main__.py  __version__.py  abs_runner.py  checkers.py  cli.py  configure_logging.py  dcc_qc_runner.py  hathi_qc_runner.py  process.py  runner.py  task_manager.py  tasks.py  validation_processors.py  validators.py
dcc_qc/checkers/: __init__.py  builder.py  check_suite.py  hathi_lab.py  hathi_lab_factory.py  hathi_submit.py  utils.py  validator_factory.py
dcc_qc/profiles/: __init__.py  hathi_lab.py  hathi_submit.py  profile.py  profile_factory.py  utils.py
dcc_qc/reports/: __init__.py  handler.py  manager.py
dcc_qc/task_states/: abs_state.py  complete.py  empty.py  queued.py  working.py
dcc_qc/validator/: validator.py
dcc_qc/validators/: abs_validators.py  error_message.py  hathi_lab.py  hathi_lab_factory.py  results.py
designdocs/: furps.md  technical.md
docs/: Makefile  make.bat
docs/designdocs/: technical.md
docs/source/: about.rst  changelog.rst  conf.py  dcc_qc.checkers.rst  dcc_qc.packages.rst  dcc_qc.profiles.rst  dcc_qc.reports.rst  dcc_qc.rst  dcc_qc.task_states.rst  dcc_qc.validator.rst  dcc_qc.validators.rst  dependencies.rst  index.rst  installSourceCLI.rst  modules.rst  requirements.rst  usageCLI.rst
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements.txt
src/dcc_qc/: cli.py  process.py  runner.py  tasks.py
src/dcc_qc/checkers/: __init__.py  abs_checkers.py  builder.py  hathi_submit_factory.py  utils.py
src/dcc_qc/profiles/: hathi_lab.py
src/dcc_qc/task_states/: __init__.py  complete.py  empty.py  statuses.py
src/dcc_qc/validator/: validator.py
tests/: test_bad_files.py  test_hathi_checker.py  test_hathi_lab_package.py  test_hathi_package.py  test_hathi_submit.py  test_hathi_submit_checker.py  test_hathi_validations.py  test_profiles.py  test_taskManager.py  test_validator_factory.py
vars/: runJenkinsPipeline.groovy
