[metadata]
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Topic :: System :: Archiving :: Packaging

[aliases]
test=pytest

[options]
zip_safe = False
python_requires = >=3.6

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
